--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -53,6 +53,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
+            android:alpha="0.6"
             app:cardBackgroundColor="@color/background_2"
             app:cardCornerRadius="10dp"
             app:cardElevation="0dp"
@@ -65,29 +66,30 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <ImageView
-                    android:id="@+id/searchIcon"
-                    android:layout_width="14dp"
-                    android:layout_height="14dp"
-                    android:layout_marginStart="13dp"
-                    android:src="@drawable/ic_search"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/searchHint"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="7dp"
-                    android:text="@string/search_all"
-                    android:textColor="@color/label_tertiary"
-                    android:textSize="14sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/searchIcon"
-                    app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
+
+        <ImageView
+            android:id="@+id/searchIcon"
+            android:layout_width="14dp"
+            android:layout_height="14dp"
+            android:layout_marginStart="13dp"
+            android:src="@drawable/ic_search"
+            app:layout_constraintBottom_toBottomOf="@+id/searchBox"
+            app:layout_constraintStart_toStartOf="@+id/searchBox"
+            app:layout_constraintTop_toTopOf="@+id/searchBox" />
+
+        <TextView
+            android:id="@+id/searchHint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="7dp"
+            android:text="@string/search_all"
+            android:textColor="@color/label_tertiary"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="@+id/searchBox"
+            app:layout_constraintStart_toEndOf="@+id/searchIcon"
+            app:layout_constraintTop_toTopOf="@+id/searchBox" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/newButton"
@@ -96,6 +98,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="10dp"
+            android:alpha="0.6"
             app:cardBackgroundColor="@color/background_2"
             app:cardCornerRadius="10dp"
             app:cardElevation="0dp"
@@ -103,14 +106,18 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <ImageView
-                android:id="@+id/newIcon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_new" />
-
         </androidx.cardview.widget.CardView>
+
+        <ImageView
+            android:id="@+id/newIcon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_new"
+            app:layout_constraintBottom_toBottomOf="@+id/newButton"
+            app:layout_constraintEnd_toEndOf="@+id/newButton"
+            app:layout_constraintStart_toStartOf="@+id/newButton"
+            app:layout_constraintTop_toTopOf="@+id/newButton" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
