--- a/app/src/main/res/drawable/ic_nav_notice_selected.xml
+++ b/app/src/main/res/drawable/ic_nav_notice_selected.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="20dp"
-    android:height="18dp"
-    android:viewportWidth="20"
-    android:viewportHeight="18">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
   <path
-      android:pathData="M0,5.994C0,2.683 2.677,0 6.001,0L13.999,0C17.313,0 20,2.695 20,5.994L20,18L6.001,18C2.687,18 0,15.305 0,12.006L0,5.994ZM12,8L12,10L14,10L14,8L12,8ZM6,8L6,10L8,10L8,8L6,8Z"
+      android:pathData="M2 8.99374C2 5.68349 4.67654 3 8.00066 3L15.9993 3C19.3134 3 22 5.69478 22 8.99374L22 21L8.00066 21C4.68659 21 2 18.3052 2 15.0063L2 8.99374ZM14 11L14 13L16 13L16 11L14 11ZM8 11L8 13L10 13L10 11L8 11Z"
       android:fillColor="@color/label_primary"/>
 </vector>
