--- a/app/src/main/res/drawable/ic_nav_home.xml
+++ b/app/src/main/res/drawable/ic_nav_home.xml
@@ -1,9 +1,11 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="18dp"
-    android:height="18.733dp"
-    android:viewportWidth="18"
-    android:viewportHeight="18.733">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24.0"
+    android:viewportHeight="24.0">
   <path
-      android:pathData="M18,17.733C18,18.285 17.552,18.733 17,18.733L1,18.733C0.448,18.733 0,18.285 0,17.733L0,7.222C0,6.914 0.142,6.622 0.386,6.433L8.386,0.211C8.747,-0.07 9.253,-0.07 9.614,0.211L17.614,6.433C17.858,6.622 18,6.914 18,7.222L18,17.733ZM8,10.733L8,16.733L10,16.733L10,10.733L8,10.733Z"
-      android:fillColor="@color/label_tertiary"/>
+      android:pathData="M21.39 19.8024C21.39 20.3547 20.9423 20.8024 20.39 20.8024L4.39001 20.8024C3.83773 20.8024 3.39001 20.3547 3.39001 19.8024L3.39001 9.29239C3.39001 8.9838 3.53642 8.69183 3.78001 8.50239L11.89 2.28239C12.2511 2.00153 12.6389 2.00153 13 2.28239L21 8.50239C21.2436 8.69183 21.39 8.9838 21.39 9.29239L21.39 19.8024ZM11.39 12.8024L11.39 18.8024L13.39 18.8024L13.39 12.8024L11.39 12.8024Z"
+      android:fillColor="@color/label_tertiary"
+      tools:ignore="VectorPath" />
 </vector>
