--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -38,7 +38,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/bigTitle"
+                    android:id="@+id/bigTitleText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="28dp"
@@ -54,14 +54,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_marginStart="12dp"
-                    android:layout_marginTop="18dp"
+                    android:layout_marginTop="12dp"
                     android:layout_marginEnd="12dp"
                     app:cardBackgroundColor="@color/background_2"
                     app:cardCornerRadius="18dp"
                     app:cardElevation="0dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/bigTitle">
+                    app:layout_constraintTop_toBottomOf="@+id/bigTitleText">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/appInfoLayout"
