--- a/app/src/main/res/layout/fragment_sub_notice.xml
+++ b/app/src/main/res/layout/fragment_sub_notice.xml
@@ -6,75 +6,87 @@
     android:layout_height="match_parent"
     tools:context=".fragment.notice.SubNoticeFragment">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="12dp"
-        app:cardBackgroundColor="@color/background_2"
-        app:cardCornerRadius="18dp"
-        app:cardElevation="0dp"
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/rootScrollView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:fillViewport="true"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
-            <com.gustate.uotan.gustatex.view.OptionView
-                android:id="@+id/optionView3"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraintLayout2"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="6dp"
+                android:layout_marginEnd="12dp"
+                android:background="@drawable/gustatex_option_background_normal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:optionIcon="@drawable/ic_option_at"
-                app:optionTitle="@string/at_my" />
+                app:layout_constraintTop_toTopOf="parent">
 
-            <com.gustate.uotan.gustatex.view.OptionView
-                android:id="@+id/optionView"
+                <com.gustate.uotan.gustatex.view.OptionView
+                    android:id="@+id/optionView3"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:optionIcon="@drawable/ic_option_at"
+                    app:optionTitle="@string/at_my" />
+
+                <com.gustate.uotan.gustatex.view.OptionView
+                    android:id="@+id/optionView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/optionView3"
+                    app:optionIcon="@drawable/ic_option_like"
+                    app:optionTitle="@string/received_likes" />
+
+                <com.gustate.uotan.gustatex.view.OptionView
+                    android:id="@+id/optionView2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/optionView"
+                    app:optionIcon="@drawable/ic_option_follow"
+                    app:optionTitle="@string/follow_me" />
+
+                <com.gustate.uotan.gustatex.view.OptionView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/optionView2"
+                    app:optionIcon="@drawable/ic_option_sysnotice"
+                    app:optionTitle="@string/system_message" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:clipToPadding="false"
+                android:scrollbarThumbVertical="@drawable/gustatex_scrollbar_thumb_vertical"
+                android:scrollbars="vertical"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/optionView3"
-                app:optionIcon="@drawable/ic_option_like"
-                app:optionTitle="@string/received_likes" />
-
-            <com.gustate.uotan.gustatex.view.OptionView
-                android:id="@+id/optionView2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/optionView"
-                app:optionIcon="@drawable/ic_option_follow"
-                app:optionTitle="@string/follow_me" />
-
-            <com.gustate.uotan.gustatex.view.OptionView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/optionView2"
-                app:optionIcon="@drawable/ic_option_sysnotice"
-                app:optionTitle="@string/system_message" />
-
+                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="12dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView2" />
+    </androidx.core.widget.NestedScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
