--- a/app/src/main/res/layout/recycler_plate_item.xml
+++ b/app/src/main/res/layout/recycler_plate_item.xml
@@ -9,6 +9,7 @@
         android:id="@+id/item"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="12dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/gustatex_option_background"
         app:layout_constraintBottom_toBottomOf="parent"
