--- a/app/src/main/res/layout/recycler_recommend_item.xml
+++ b/app/src/main/res/layout/recycler_recommend_item.xml
@@ -13,6 +13,7 @@
         android:layout_marginEnd="12dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/gustatex_option_background"
+        android:paddingBottom="14dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -163,8 +164,6 @@
             android:layout_height="13dp"
             android:layout_marginStart="14dp"
             android:layout_marginTop="14dp"
-            android:layout_marginBottom="14dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/topicCard"
             app:srcCompat="@drawable/ic_view_count" />
